--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3771,7 +3771,7 @@ aside .latest-post li figure {width: 75px;}
 .gridblock-list>:nth-child(3n) { margin-right: 0; }
 
 /* home - blog masonry */
-.blog-header-style1 {margin: 0 8px; padding: 0; list-style: none; display: flex; justify-content: start;}
+.blog-header-style1 {margin: 0 8px; padding: 0; list-style: none; display: flex; justify-content: flex-start;}
 .blog-header-style1 li {width: 25%; padding: 0 8px; margin: 0 -4px 0 0;display: inline-block; box-sizing: border-box; overflow: hidden; vertical-align: top; transition: 0.8s; -webkit-transition: 0.8s; -moz-transition: 0.8s; -ms-transition: 0.8s; -o-transition: 0.8s;}
 .blog-header-style1 li .blog-banner {display: block; position: relative; height: 100%;}
 .blog-header-style1 li figure figcaption {position: absolute; left: 0; bottom: 0; padding: 50px; transform: translateY(60px); -webkit-transform: translateY(60px); -moz-transform: translateY(60px); -ms-transform: translateY(60px); -o-transform: translateY(60px);}
